...
                                    <outlet property="nameLabel" destination="211-cG-g8V" id="ulK-WX-MFn"/>
                                    <segue destination="g0y-sA-Lgz" kind="show" identifier="countryDetailSegue" id="sWd-KI-0KH"/>
                                </connections>
                            </tableViewCell>
                        </prototypes>
                    </tableView>
                    <navigationItem key="navigationItem" title="EU Members" id="eq7-wE-4B0">
                        <barButtonItem key="leftBarButtonItem" title="Sort By" id="TUM-hl-9cD">
                            <connections>
                                <segue destination="bFx-1M-V6J" kind="presentation" identifier="selectSort" id="uKT-Hf-A1q"/>
                            </connections>
                        </barButtonItem>
                    </navigationItem>
                    <connections>
...
                                </items>
                            </navigationBar>
                            <segmentedControl opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="fill" contentVerticalAlignment="top" segmentControlStyle="plain" selectedSegmentIndex="0" translatesAutoresizingMaskIntoConstraints="NO" id="Sxi-xv-2BX">
                                <rect key="frame" x="150" y="83" width="99" height="29"/>
                                <segments>
                                    <segment title="Up"/>
                                    <segment title="Down"/>
                                </segments>
                            </segmentedControl>
                            <pickerView contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="S0g-yh-tpd">
                                <rect key="frame" x="0.0" y="131" width="375" height="162"/>
                                <constraints>
                                    <constraint firstAttribute="height" constant="162" id="mVH-wL-NJt"/>
...
