...

    var delegate: SortByDelegate?
    
    @IBOutlet weak var sortDirection: UISegmentedControl!
    @IBOutlet weak var picker: UIPickerView!
    
    let sortKeys = ["Name", "Area", "Population", "EU join date"]
    
    override func viewDidLoad() {
        super.viewDidLoad()

        // Do any additional setup after loading the view.
        
...
